Deleted obsolete Extended2DMesh and its corresponding functional classes, provided builder and runner for AdjacencyMOCell with mutation, problem and solution